2003-03-30  Alif Wahid	<awah005@users.sourceforge.net>

	Added new example programs. Another set of straight
	conversion from C to Python based on Naofumi's programs
	from GtkGLExt in C.

	* examples/simple.py
	* examples/simple-mixed.py: Tests the mixing of GDK and
	OpenGL calls using a DrawingArea widget.

2003-03-30  Alif Wahid	<awah005@users.sourceforge.net>

	Added example program. Another straight conversion from
	C to Python based on Naofumi's program in C.

	* examples/pixmap-mixed.py: Tests the mixing of GDK and
	OpenGL calls using a GdkPixmap.

2003-03-22  Alif Wahid	<awah005@users.sourceforge.net>

	Added some basic instruction for building using
	python and distutil on Win32 platforms. See the
	WIN32_BUILD file.

2003-03-22  Alif Wahid	<awah005@users.sourceforge.net>

	Added new example programs. These are a mappings of the
	programs that Naofumi wrote for GtkGLExt in C. These
	should test a few more features of PyGtkGLExt before the
	next release.

	* examples/font.py: *** currently it's quite patchy, needs fixing. ***
	* examples/low-level.py
	* examples/pixmap.py

2003-03-21  Alif Wahid	<awah005@users.sourceforge.net>

	Updated remaining example programs that
	used PyGtkGLTemplate module to now use
	the gtk.gtkgl.apputils module.

	* examples/Shapes.py
	* examples/teapot2.py

	Some cleanup of other examples.

	* examples/MoveLight.py
	* examples/NeHe6Multi.py
	* examples/SimpleScene.py

	Finally, removed the PyGtkGLTemplate module.

	* examples/PyGtkGLTemplate.py: removed.

2003-03-19  Alif Wahid	<awah005@users.sourceforge.net>

	Updated following example programs to use
	the gtk.gtkgl.apputils module.

	* examples/NeHe6Multi.py
	* examples/SimpleScene.py
	* examples/MoveLight.py

2003-03-19  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/teapot.py (realize): Clear color and depth.

	* setup.py.in:
	* gtk/gdkgl/Makefile.am:
	* gtk/gtkgl/Makefile.am: Changed extension module file names to
	_gdkgl.so and _gtkgl.so.
